# AI-Codeing

./: .gitignore  README.md
backend/: .coverage  .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 445fb2a061cf_initial_schema.py  bb98270190b8_add_is_builtin_to_data_feeds.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  cases.py  credibility.py  events.py  feeds.py  router.py  tags.py
backend/app/models/: __init__.py  case.py  credibility.py  data_feed.py  event_node.py  source.py
backend/app/schemas/: auth.py  case.py  common.py  credibility.py  data_feed.py  event_node.py
backend/app/services/: audit.py  builtin_feeds.py  case_lifecycle.py  collector.py  credibility.py  entity_extractor.py  hotness.py  nlp_matcher.py
backend/app/tasks/: scheduler.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_classify_case.py  test_entity_extractor.py  test_source_type.py
backend/tests/contract/: test_builtin_feeds.py  test_cases.py  test_credibility.py  test_events.py  test_feeds.py  test_search.py  test_tags.py
backend/tests/unit/: test_builtin_seed.py  test_case_lifecycle.py  test_collector.py  test_credibility.py  test_hotness.py  test_nlp_matcher.py
docs/: Vibe-Coding方法论总结.md  功能模块说明.md  技术创新点分析.md
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  cases.ts  client.ts  credibility.ts  events.ts  feeds.ts
frontend/tests/: setup.ts
(+23 files in other folders)
